tests/reference/asr-array_shape_03-3313f09.stderr
semantic error: Different shape for array assignment on dimension 1(2 and 1)
 --> tests/errors/array_shape_03.f90:5:5
  |
5 |     a = temp(i0:i0)
  |     ^^^^^^^^^^^^^^^ 
